z-index on resolve container, comment cleanups

--- a/src/components/ResolveCard.module.css
+++ b/src/components/ResolveCard.module.css
@@ -7,6 +7,7 @@
   height: 100%;
 
   border: 1px solid blue;
+  z-index: 5;
 }
 
 .resolveActionField {
